--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -33,7 +33,7 @@
     display: flex;
     flex-direction: column;
   
-    /* width: 100vw; */
+    width: 100vw;
     height: 100vh;
     padding: 32px;
     background-color: #fff;
